# CodingAgent

./: .gitignore  README.md  app.py  main.py  pyproject.toml
embedding/: Dockerfile
indexer/: Cargo.toml
indexer/src/: directory_indexer.rs  embedder.rs  main.rs  server.rs  vector_store.rs  vector_store_mongo.rs
model/: Dockerfile
src/codingagent/: config.py  main.py
