[project]
name = "mesh-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "llama-cpp-python>=0.3.14",
    "mcp>=1.12.1",
    "ollama>=0.5.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "textual>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./packages/*"]
