[project]
name = "codingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.11.0",
    "llama-cpp-python>=0.3.14",
    "ollama>=0.5.1",
    "prompt-toolkit>=3.0.51",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "textual>=4.0.0",
]

[project.scripts]
coding-agent = "codingagent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["codingagent"]
packages = ["src/packages", "src/codingagent"]

[tool.uv]
dev-dependencies = [
    "nuitka>=2.7.12",
]
