[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
walkdir = "2.5.0"

[dependencies.mongodb]
version = "3.2.4"
